--- a/personal/index.html
+++ b/personal/index.html
@@ -5,7 +5,8 @@
 
   <title>alexvp.com</title>
 
-  <link rel="stylesheet" href="styles.css" type="text/css" />
+  <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,400italic,700,700italic|Roboto' rel='stylesheet' type='text/css'>
+  <link href="styles.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -18,11 +19,11 @@
 
 <div class="top-right"><div class="inner-bottom">
   <h2>// Bio</h2>
-  <p>Hi, my name is Alex. I'm Canadian and Dutch, and I live in the Netherlands. Right now I'm working on a M.Sc. in Computer Science, and I work part time as a software developer. My professional interests include algorithm design, infosec, and machine learning.</p>
+  <p>Hi, my name is Alex. I'm Canadian and Dutch, and I live in the Netherlands. Right now I'm working on a M.Sc. in Computer Science. Previously I worked part time as a software developer. My professional interests include algorithm design, application security, and cryptography.</p>
 </div></div>
 
 <div class="bottom-left">
-  <p>I occasionally post on instagram at <a href="https://instagram.com/avanpop/">avanpop</a>. I've got a twitter account <a href="https://twitter.com/alexvp">@alexvp</a> that I never use. I can be reached at avanpoppelen at gmail dot com.</p>
+	<p>I occasionally post on instagram at <a href="https://instagram.com/avanpop/">avanpo</a>. I've got a twitter account <a href="https://twitter.com/alexvp">@alexvp</a> that I never use. View my <a href="https://github.com/avanpo">github</a>. I can be reached at avanpoppelen at gmail dot com.</p>
   <p>Copyright &copy; 2015 Alex van Poppelen.</p>
 </div>
 
@@ -30,10 +31,10 @@
   <h3>// Writing</h3>
   <p>I occasionally blog about technical stuff at my github <a href="https://avanpo.github.io/">pages</a>. I just started this, but hope to fill it with things I learn as I go.</p>
   <h3>// School</h3>
-  <p>I have a B.Math from the University of Waterloo, Canada. Right now I'm in the middle of a M.Sc. at Utrecht University. My specialization is algorithm design and complexity. I also dabble in crypto and infosec in my spare time.</p>
+  <p>I have a B.Math from the University of Waterloo, Canada. Right now I'm in the middle of a M.Sc. at Utrecht University. My specialization is algorithm design and complexity. I also dabble in crypto and appsec in my spare time.</p>
   <h3>// Personal</h3>
   <p>I like to stay active. I've done a lot of different sports in my life, but right now I play volleyball and powerlift.</p>
-  <p>I also enjoy traveling, cooking, and recently I've been trying to get into a bit of film making.</p>
+  <p>I also have interests in traveling, cooking, and generally enjoying the finer things in life.</p>
 </div>
 
 </div>
