--- a/personal/index.html
+++ b/personal/index.html
@@ -23,7 +23,7 @@
 </div></div>
 
 <div class="bottom-left">
-	<p>I occasionally post on instagram at <a href="https://instagram.com/avanpop/">avanpo</a>. I've got a twitter account <a href="https://twitter.com/alexvp">@alexvp</a> that I never use. View my <a href="https://github.com/avanpo">github</a>. I can be reached at avanpoppelen at gmail dot com.</p>
+	<p>I occasionally post on instagram at <a href="https://instagram.com/avanpo">avanpo</a>. I've got a twitter account <a href="https://twitter.com/alexvp">@alexvp</a> that I never use. View my <a href="https://github.com/avanpo">github</a>. I can be reached at avanpoppelen at gmail dot com.</p>
   <p>Copyright &copy; 2015 Alex van Poppelen.</p>
 </div>
 
